# trader-zex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  auth.py  config.py  dashboard.py  fyers_client.py  hmm_model.py  main.py  pyproject.toml  ranker.py  requirements.txt  rxconfig.py  screener.py  structure.py  universe.py  visualization.py
apps/: main.py  ranker.py
backtest/: __main__.py  data_loader.py  engine.py  instruments.py  metrics.py  pead_strategy.py  signal_precompute.py  strategy.py
core/: auth.py  config.py  confluence.py  fyers_client.py  main.py  manifest.py  pead_core.py  ranker.py  screener.py  universe.py
core/backtest/: __init__.py  __main__.py  engine.py  instruments.py  metrics.py  signal_precompute.py
core/brokers/: __init__.py  base.py
core/brokers/fyers/: __init__.py  adapter.py  auth.py  client.py
core/live/: __init__.py  fyers_sandbox.py  monitor.py  risk.py  state.py
core/operators/: main.py  ranker.py
core/research/: __init__.py  cost.py  data.py  event_study.py  events_nse.py  report.py  stats.py
core/signals/: hmm_model.py  structure.py
deploy/: docker-publish.yml
docs/: ARCHITECTURE.md  EC2_DEPLOYMENT.md  ENVIRONMENTS.md  FYERS_AUTH.md  GAP_FADE_THESIS.md  MOMENTUM_THESIS.md  PEAD_PLAYBOOK.md  PEAD_THESIS.md  PIPELINE.md  RESEARCH_BACKLOG.md  STRATEGY_GUIDELINES.md  STRATEGY_STRUCTURE.md  TASKS.md
docs/research/: README.md
docs/research/hmm_confluence/: backtest.py  manifest.py  strategy.py
docs/research/hmm_confluence/research/: validate_confluence.py
runners/: __init__.py  _common.py  backtest.py  list.py  live.py  paper.py  sandbox.py
scripts/: _restructure_moves.sh  breakout_test.py  check_label_stability.py  continuation_limit.py  feature_ic.py  gap_fade_intraday.py  gap_fade_test.py  intraday_edge.py  momentum_ic.py  pead_backtest.py  pead_event_ic.py  pead_fundamental.py  pead_liquidity.py  pead_nt_backtest.py  pead_signals.py  pead_surprise.py  ranker_ic.py  refresh_token.sh  reversal_test.py  screener_data.py  validate_confluence.py
strategies/: __init__.py
strategies/_template/: .env.example  STATUS.md  config.py  manifest.py
strategies/breakout/: STATUS.md  manifest.py
strategies/breakout/research/: breakout_test.py
strategies/continuation/: STATUS.md  manifest.py
strategies/continuation/research/: continuation_limit.py
strategies/gap_fade/: STATUS.md  manifest.py
strategies/gap_fade/research/: gap_fade_test.py
strategies/hmm_confluence/: STATUS.md  backtest.py  manifest.py  strategy.py
strategies/momentum/: .env.example  GATES.md  PLAYBOOK.md  README.md  STATUS.md  backtest.py  config.py  gate4_hyperparam_tuning.py  gate4_walkforward.py  manifest.py  paper.py  sandbox.py  signal.py  strategy.py
strategies/momentum/research/: README.md  momentum_ic.py  nifty500_universe_template.csv  phase3_test.py  prepare_data.py  trend_signal.py  triage.py  universe_registry.py  verify_gate5.py
strategies/momentum/tests/: test_momentum_ic.py
strategies/pead/: .env.example  PLAYBOOK.md  STATUS.md  THESIS.md  backtest.py  config.py  core.py  manifest.py  paper.py  sandbox.py  sandbox_monitor.py  strategy.py
strategies/pead/research/: pead_backtest.py  pead_event_ic.py  pead_fundamental.py  pead_liquidity.py  pead_nt_backtest.py  pead_signals.py  pead_surprise.py
strategies/pead/tests/: test_pead_core.py
strategies/reversal/: STATUS.md  manifest.py
strategies/reversal/research/: reversal_test.py
tests/: conftest.py  test_auth.py  test_confluence.py  test_data_loader.py  test_hmm_model.py  test_instruments.py  test_metrics.py  test_pead_core.py  test_pipeline.py  test_risk.py
trader_zex/: state.py  table_html.py  trader_zex.py
