[project]
name = "trader-zex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fyers-apiv3>=3.0.0",
    "hmmlearn>=0.3.0",
    "nsepython>=2.97",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "reflex>=0.9.0",
    "nautilus-trader>=1.208.0",
    "pyarrow>=14.0.0",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
testpaths = ["tests", "strategies"]
markers = [
    "slow: marks tests as slow (HMM fit); deselected by default — run with -m slow",
]

[tool.poe.tasks]
screen    = "python -m apps.main"
universe  = "python -m apps.main --universe"
app       = "reflex run"
auth      = "python -m core.brokers.fyers.auth"
rank      = "python -m apps.ranker"
backtest  = "python -m core.backtest"
