[project]
name = "trader-zex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fyers-apiv3>=3.0.0",
    "hmmlearn>=0.3.0",
    "nsepython>=2.97",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "python-dotenv>=1.2.2",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.11.0",
    "reflex>=0.9.0",
    "nautilus-trader>=1.208.0",
    "pyarrow>=14.0.0",
    "pyotp>=2.9.0",
]

[dependency-groups]
dev = [
    "poethepoet>=0.45.0",
    "pytest>=9.0.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
typeCheckingMode = "basic"
# pandas/numpy stubs are incomplete for the idioms this codebase lives on
# (DatetimeIndex.date, Index.normalize, ExtensionArray arithmetic, NT configs).
# Runtime correctness is covered by the test suite; keep the high-signal rules
# (missing imports, unbound vars) on and silence the stub-gap noise.
reportAttributeAccessIssue = "none"
reportOperatorIssue = "none"
reportArgumentType = "none"
reportCallIssue = "none"
reportIndexIssue = "none"
reportReturnType = "none"
reportAssignmentType = "none"
reportFunctionMemberAccess = "none"
reportOptionalSubscript = "none"
reportOptionalMemberAccess = "none"
reportOptionalIterable = "none"
reportGeneralTypeIssues = "none"

[tool.pytest.ini_options]
addopts = "-m 'not slow'"
testpaths = ["tests", "strategies"]
markers = [
    "slow: marks tests as slow (HMM fit); deselected by default — run with -m slow",
]

[tool.poe.tasks]
screen    = "python -m core.operators.main"
universe  = "python -m core.operators.main --universe"
app       = "reflex run"
auth      = "python -m core.brokers.fyers.auth"
rank      = "python -m core.operators.ranker"
backtest  = "python -m core.backtest"
